--- a/MVC/MVC.csproj
+++ b/MVC/MVC.csproj
@@ -147,6 +147,7 @@
     <Compile Include="Areas\Admin\Models\DeleteViewModel.cs" />
     <Compile Include="Areas\Admin\Models\StatisticalViewModel.cs" />
     <Compile Include="Controllers\ApplicationController.cs" />
+    <Compile Include="Controllers\CartController.cs" />
     <Compile Include="Controllers\ForgetPassController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
@@ -440,6 +441,7 @@
     <Content Include="Views\Shared\ForgetPass.cshtml" />
     <Content Include="Views\Orders\Index.cshtml" />
     <Content Include="Views\Orders\Detail.cshtml" />
+    <Content Include="Views\Cart\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
