--- a/MVC/MVC.csproj
+++ b/MVC/MVC.csproj
@@ -250,6 +250,7 @@
     <Content Include="Resource\slideshow4.jpg" />
     <Content Include="Resource\support.png" />
     <Content Include="Resource\trust.png" />
+    <Content Include="Scripts\bootstrap-input-spinner.js" />
     <Content Include="Scripts\bootstrap-validate.js" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
