--- a/MVC/MVC.csproj
+++ b/MVC/MVC.csproj
@@ -239,6 +239,30 @@
     <Content Include="Resource\chitiet\9.png" />
     <Content Include="Resource\ClipBG.svg" />
     <Content Include="Resource\free.png" />
+    <Content Include="Resource\HinhMau\Mau1.png" />
+    <Content Include="Resource\HinhMau\Mau10.png" />
+    <Content Include="Resource\HinhMau\Mau11.png" />
+    <Content Include="Resource\HinhMau\Mau12.png" />
+    <Content Include="Resource\HinhMau\Mau13.png" />
+    <Content Include="Resource\HinhMau\Mau14.png" />
+    <Content Include="Resource\HinhMau\Mau15.png" />
+    <Content Include="Resource\HinhMau\Mau16.png" />
+    <Content Include="Resource\HinhMau\Mau17.png" />
+    <Content Include="Resource\HinhMau\Mau18.png" />
+    <Content Include="Resource\HinhMau\Mau19.png" />
+    <Content Include="Resource\HinhMau\Mau2.png" />
+    <Content Include="Resource\HinhMau\Mau20.png" />
+    <Content Include="Resource\HinhMau\Mau21.png" />
+    <Content Include="Resource\HinhMau\Mau22.png" />
+    <Content Include="Resource\HinhMau\Mau23.png" />
+    <Content Include="Resource\HinhMau\Mau24.png" />
+    <Content Include="Resource\HinhMau\Mau3.png" />
+    <Content Include="Resource\HinhMau\Mau4.png" />
+    <Content Include="Resource\HinhMau\Mau5.png" />
+    <Content Include="Resource\HinhMau\Mau6.png" />
+    <Content Include="Resource\HinhMau\Mau7.png" />
+    <Content Include="Resource\HinhMau\Mau8.png" />
+    <Content Include="Resource\HinhMau\Mau9.png" />
     <Content Include="Resource\hot.gif" />
     <Content Include="Resource\KhuyenMai.png" />
     <Content Include="Resource\laser.png" />
