bất lực fix product

--- a/MVC/MVC.csproj
+++ b/MVC/MVC.csproj
@@ -202,6 +202,7 @@
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Resource\Avatar\avatar.png" />
     <Content Include="Resource\BANNERR_2048x.png" />
     <Content Include="Resource\bg.png" />
     <Content Include="Resource\BGLasted.svg" />
