--- a/MVC/Web.config
+++ b/MVC/Web.config
@@ -17,8 +17,8 @@
     <add key="onPercent" value="0.5"/>
   </appSettings>
   <system.web>
-    <customErrors mode="On" defaultRedirect="~/Error">
-    </customErrors>
+    <!--<customErrors mode="On" defaultRedirect="~/Error">
+    </customErrors>-->
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
     <authentication mode="Forms">
