--- a/MVC/Web.config
+++ b/MVC/Web.config
@@ -15,8 +15,8 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <!--<customErrors mode="On" defaultRedirect="~/Error">
-    </customErrors>-->
+    <customErrors mode="On" defaultRedirect="~/Error">
+    </customErrors>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
     <authentication mode="Forms">
